Update jsonParser.java