@@ -1,40 +1,51 @@
+package com.example.gamecatalogproject;
+
+
 import org.json.JSONArray;
 import org.json.JSONObject;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
 
 public class JSONParser {
     public ArrayList<Game> readFromJsonFile(String fileName) {
         ArrayList<Game> result = new ArrayList<>();
-        System.out.println("Attempting to load from: " + Paths.get(fileName).toAbsolutePath());
 
         try {
-            String text = new String(Files.readAllBytes(Paths.get(fileName)), StandardCharsets.UTF_8);
-            System.out.println("Successfully read file, content length: " + text.length());
+            // First try to load as resource from JAR
+            InputStream is = getClass().getResourceAsStream("/" + fileName);
+            String text;
+
+            if (is != null) {
+                // Inside JAR
+                text = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+                is.close();
+            } else {
+                // Outside JAR (development)
+                System.out.println("Attempting to load from: " + Paths.get(fileName).toAbsolutePath());
+                text = new String(Files.readAllBytes(Paths.get(fileName)), StandardCharsets.UTF_8);
+            }
 
             if (text.trim().startsWith("[")) {
-                System.out.println("Detected root-level array format");
                 JSONArray arr = new JSONArray(text);
                 processGamesArray(arr, result);
             } else {
-                System.out.println("Detected object format");
                 JSONObject obj = new JSONObject(text);
                 if (obj.has("games")) {
-                    System.out.println("Found 'games' array in object");
                     JSONArray arr = obj.getJSONArray("games");
                     processGamesArray(arr, result);
                 } else {
-                    System.out.println("Treating as single game object");
                     Game game = parseGameObject(obj);
                     if (game != null) {
                         result.add(game);
                     }
                 }
             }
-            System.out.println("Successfully loaded " + result.size() + " games");
         } catch (Exception exception) {
             System.err.println("Error parsing JSON: " + exception.toString());
             exception.printStackTrace();
@@ -56,11 +67,14 @@ public class JSONParser {
                 gameObj.put("releaseYear", game.getGameReleaseYear());
                 gameObj.put("playtime", game.getGamePlaytime());
                 gameObj.put("tags", new JSONArray(game.getGameTags()));
-                
                 jsonArray.put(gameObj);
             }
 
-            Files.write(Paths.get(fileName), jsonArray.toString(2).getBytes(StandardCharsets.UTF_8));
+            // Always save to external file (not inside JAR)
+            Files.write(Paths.get(fileName),
+                    jsonArray.toString(2).getBytes(StandardCharsets.UTF_8),
+                    StandardOpenOption.CREATE,
+                    StandardOpenOption.TRUNCATE_EXISTING);
             return true;
         } catch (Exception e) {
             System.err.println("Error saving to JSON file: " + e.toString());
@@ -85,17 +99,17 @@ public class JSONParser {
             String developer = gameObj.getString("developer");
             String publisher = gameObj.getString("publisher");
 
-            JSONArray genresArray = gameObj.has("genres") ? 
+            JSONArray genresArray = gameObj.has("genres") ?
                     gameObj.getJSONArray("genres") : gameObj.getJSONArray("genre");
             List<String> genres = jsonArrayToList(genresArray);
 
             JSONArray platformsArray = gameObj.getJSONArray("platforms");
             List<String> platforms = jsonArrayToList(platformsArray);
 
-            String steamID = gameObj.has("steamID") ? 
+            String steamID = gameObj.has("steamID") ?
                     gameObj.getString("steamID") : gameObj.getString("steamid");
 
-            String releaseYear = gameObj.has("releaseYear") ? 
+            String releaseYear = gameObj.has("releaseYear") ?
                     gameObj.getString("releaseYear") : gameObj.getString("release_year");
 
             String playtime = gameObj.getString("playtime");
